// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`html4.01_frameset.html format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Frameset//EN"
  "http://www.w3.org/TR/html4/frameset.dtd">
<html>
  <head>
    <title>An HTML standard template</title>
    <meta charset="utf-8"  />
  </head>
  <body>
    <p>… Your HTML content here …</p>
  </body>
</html>

=====================================output=====================================
<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Frameset//EN" "http://www.w3.org/TR/html4/frameset.dtd">
<html>
  <head>
    <title>An HTML standard template</title>
    <meta charset="utf-8" />
  </head>
  <body>
    <p>… Your HTML content here …</p>
  </body>
</html>

================================================================================
`;

exports[`html4.01_strict.html format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN"
  "http://www.w3.org/TR/html4/strict.dtd">
<html>
  <head>
    <title>An HTML standard template</title>
    <meta charset="utf-8" />
  </head>
  <body>
    <p>… Your HTML content here …</p>
  </body>
</html>

=====================================output=====================================
<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
<html>
  <head>
    <title>An HTML standard template</title>
    <meta charset="utf-8" />
  </head>
  <body>
    <p>… Your HTML content here …</p>
  </body>
</html>

================================================================================
`;

exports[`html4.01_transitional.html format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
  "http://www.w3.org/TR/html4/loose.dtd">
<html>
  <head>
    <title>An HTML standard template</title>
    <meta charset="utf-8" />
  </head>
  <body>
    <p>… Your HTML content here …</p>
  </body>
</html>

=====================================output=====================================
<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
<html>
  <head>
    <title>An HTML standard template</title>
    <meta charset="utf-8" />
  </head>
  <body>
    <p>… Your HTML content here …</p>
  </body>
</html>

================================================================================
`;

exports[`html5.html format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<!DOCTYPE html>
<html>
  <head>
    <title>An HTML standard template</title>
    <meta charset="utf-8" />
  </head>
  <body>
    <p>… Your HTML content here …</p>
  </body>
</html>

=====================================output=====================================
<!DOCTYPE html>
<html>
  <head>
    <title>An HTML standard template</title>
    <meta charset="utf-8" />
  </head>
  <body>
    <p>… Your HTML content here …</p>
  </body>
</html>

================================================================================
`;

exports[`xhtml1.1.html format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
<html xmlns="http://www.w3.org/1999/xhtml">
  <head>
    <meta http-equiv="Content-Type" content="text/html; charset=windows-1251" />
    <title>XHTML markup</title>
  </head>
  <body style="background-color:#ffffcc; color:#008800">
    <br />
    <h2 align="center">Sample XHTML page</h2>
    <br />
    <div align="center">
      <img src="../images/bee3.jpg" width="400" height="250" alt="Beep" vspace="20" />
    </div>
    <p align="center" style="font-size:17px">Bar Foo,<br />
      Foo,<br />
      Bar<br />
      Foo</p>
    <p align="center"><em>String</em></p>
    <br />
    <hr />
  </body>
</html>

=====================================output=====================================
<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
<html xmlns="http://www.w3.org/1999/xhtml">
  <head>
    <meta http-equiv="Content-Type" content="text/html; charset=windows-1251" />
    <title>XHTML markup</title>
  </head>
  <body style="background-color: #ffffcc; color: #008800">
    <br />
    <h2 align="center">Sample XHTML page</h2>
    <br />
    <div align="center">
      <img
        src="../images/bee3.jpg"
        width="400"
        height="250"
        alt="Beep"
        vspace="20"
      />
    </div>
    <p align="center" style="font-size: 17px">
      Bar Foo,<br />
      Foo,<br />
      Bar<br />
      Foo
    </p>
    <p align="center"><em>String</em></p>
    <br />
    <hr />
  </body>
</html>

================================================================================
`;
